Target blank. Last commit before game

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     ask about ref sheets
                 </div>
                 
-                <a href="https://forms.gle/ihWP1uosAYwst8vd9">Request a commission now!</a>
+                <a href="https://forms.gle/ihWP1uosAYwst8vd9" target="_blank">Request a commission now!</a>
                 
             <!-- End Comms Section -->
             </section>
