--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
     <head>
         <title>camber elysium</title>
+        <link rel="icon" type="image/png" href="imgs/pfp-ico.png">
         
         <!-- Display information -->
         <meta charset="UTF-8">
