When will someone hire me

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             
             <!-- Footer -->
             <footer class="w3-content w3-padding-64">
+                <p>Ask me about making websites accessible!</p>
                 <p class="w3-medium">Template by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green txtlink">w3.css</a></p>
             <!-- End footer -->
             </footer>
