started gallery.js

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>base price (partial body) <strong>40 USD</strong>, add-ons +10 each.</p>
                     
                     <h4>Add-on examples:</h4>
-                    <ul>
+                    <ul id="addons">
                         <li>Full body character illustration</li>
                         <li>Additional character</li>
                         <li>Detailed props or mechanical parts</li>
@@ -120,7 +120,7 @@
                     <p><small>This list is not comprehensive; feel free to ask if you have ideas not listed here!</small></p>
                     <p>
                         If you're interested, send an email over to
-                        <a href="mailto:theaffablealmond@gmail.com">The Affable Almond</a>
+                        <a href="mailto:theaffablealmond@gmail.com" class="txtlink">The Affable Almond</a>
                         with a description of what you'd like and attached references!
                     </p>
                 </div>
@@ -157,5 +157,7 @@
             <!-- END PAGE CONTENT -->
         </main>
 
+
+        <script src="scripts/gallery.js"></script>
     </body>
 </html>
