--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
----
-title: Creations
----
-
-I'm a career programming teacher, and I've been creating and developing as
-a hobby for as long as I can remember.
-
-## Right Now
-
-Current listening: <div class="lastfm"></div>
-
-Also check out my [Stats.fm page](https://stats.fm/almondjoycam)!
-
-Reading _Gender and Power_ by [Raewyn Connell](http://www.raewynconnell.net/) (1987)
-
-## Contact Me
-
-Use this form to reach out or request commissioned work.
-
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <!-- Title -->
+        <title>Camber's Creations</title>
+        <link
+        rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
+        <meta charset="UTF-8">
+        <meta
+        name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
+        <link
+        rel="stylesheet" href="/static/styles/default.css">
+        <!-- Icons -->
+        <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <h1>Camber's Creations</h1>
+            <nav>
+                <a href="/">Home</a>
+                <a href="/gallery/">Illustration</a>
+                <a href="/web/">Websites</a>
+                <a href="/game-development/">Games</a>
+            </nav>
+        </header>
+        <main>
+            <p>I'm a career programming teacher, and I've been creating and developing as
+a hobby for as long as I can remember.</p>
+<h2>Right Now</h2>
+<p>Current listening: <div class="lastfm"></div></p>
+<p>Also check out my <a href="https://stats.fm/almondjoycam">Stats.fm page</a>!</p>
+<p>Reading <em>Gender and Power</em> by <a href="http://www.raewynconnell.net/">Raewyn Connell</a> (1987)</p>
+<h2>Contact Me</h2>
+<p>Use this form to reach out or request commissioned work.</p>
 <form id="contact-form">
     <input type="hidden" name="time" id="time" value="Mar 10 2025 08:46" aria-hidden=true>
     <label for="name">Name</label>
@@ -29,7 +44,6 @@ Use this form to reach out or request commissioned work.
     <textarea name="message" id="message" required></textarea>
     <input type="submit" value="Send">
 </form>
-
 <script src="http://code.jquery.com/jquery-git2.min.js"></script>
 <script src="http://melchor629.github.io/Last.fm-Web-Widget/lastSongs.comp.js"></script>
 <script>
@@ -42,7 +56,6 @@ Use this form to reach out or request commissioned work.
     .colorDeCancion(228, 226, 165, 1)
     .applyStyle();
 </script>
-
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script type="text/javascript">
     (function() {
@@ -66,3 +79,7 @@ Use this form to reach out or request commissioned work.
         });
     }
 </script>
+
+        </main>
+    </body>
+</html>
