--- a/web/index.html
+++ b/web/index.html
@@ -2,15 +2,14 @@
 <html lang='en'>
     <head>
         <!-- Title -->
-        <title>Camber's {{ title | safe }}</title>
+        <title>Camber's Web Development</title>
         <link
         rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
         <meta charset="UTF-8">
         <meta
         name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
-        <link rel="stylesheet" href="/static/styles/default.css">
         <link
-        rel="stylesheet" href="/static/styles/photoswipe.css">
+        rel="stylesheet" href="/static/styles/default.css">
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
     </head>
@@ -25,7 +24,15 @@
             </nav>
         </header>
         <main>
-            {{ content | safe }}
+            <h2><a href="https://almondjoycam.github.io/everything110">Everything Is An Object!</a></h2>
+<p><em>Everything Is An Object!</em> is a website that breaks down the core concepts of
+object-oriented programming in a kid-friendly manner. It contains a short
+story with simple characters as well as a reference designed to mimic professional
+scripting APIs.</p>
+<h2><a href="https://almondjoycam.github.io/sinthe170">Considering Sinthe in Context</a></h2>
+<p><em>Considering Sinthe in Context</em> is a website that takes a fictional drug crisis
+and approaches it seriously from a real-world public health perspective.</p>
+
         </main>
     </body>
 </html>
