--- a/game-development/index.html
+++ b/game-development/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <!-- Title -->
-        <title>Camber's {{ title | safe }}</title>
+        <title>Camber's Game Development</title>
         <link
         rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
         <meta charset="UTF-8">
@@ -24,7 +24,9 @@
             </nav>
         </header>
         <main>
-            {{ content | safe }}
+            <iframe frameborder="0" src="https://itch.io/embed/3685290?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=9e7dec&amp;border_color=333333" width="552" height="167"><a href="https://almondjoycam.itch.io/beeline-buzz">Beeline Buzz by almondjoycam</a></iframe>
+<iframe frameborder="0" src="https://itch.io/embed/3783983?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=9e7dec&amp;border_color=333333" width="552" height="167"><a href="https://abpo.itch.io/the-clockwork-courier">The Clockwork Courier by abpo, almondjoycam</a></iframe>
+
         </main>
     </body>
 </html>
