deploy: 4290b8644560ef7db2270720ab6dc83f795bcde7

--- a/game-development/index.html
+++ b/game-development/index.html
@@ -4,12 +4,11 @@
         <!-- Title -->
         <title>Camber's Game Development</title>
         <link
-        rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
+        rel="icon" type="image/png" href="/almondjoyart/static/imgs/pfp-ico.png"> <!-- Display information -->
         <meta charset="UTF-8">
         <meta
         name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
-        <link
-        rel="stylesheet" href="/static/styles/default.css">
+        <link rel="stylesheet" href="/almondjoyart/static/styles/default.css"> 
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
     </head>
@@ -17,15 +16,15 @@
         <header>
             <h1>Camber's Creations</h1>
             <nav>
-                <a href="/">Home</a>
-                <a href="/gallery/">Illustration</a>
-                <a href="/web/">Websites</a>
-                <a href="/game-development/">Games</a>
+                <a href="/almondjoyart/">Home</a>
+                <a href="/almondjoyart/gallery/">Illustration</a>
+                <a href="/almondjoyart/web/">Websites</a>
+                <a href="/almondjoyart/game-development/">Games</a>
             </nav>
         </header>
         <main>
-            <iframe frameborder="0" src="https://itch.io/embed/3685290?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=9e7dec&amp;border_color=333333" width="552" height="167"><a href="https://almondjoycam.itch.io/beeline-buzz">Beeline Buzz by almondjoycam</a></iframe>
-<iframe frameborder="0" src="https://itch.io/embed/3783983?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=9e7dec&amp;border_color=333333" width="552" height="167"><a href="https://abpo.itch.io/the-clockwork-courier">The Clockwork Courier by abpo, almondjoycam</a></iframe>
+            <iframe title="Beeline Buzz itch.io widget" frameborder="0" src="https://itch.io/embed/3685290?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=775be7&amp;border_color=333333" width="552" height="167"><a href="https://almondjoycam.itch.io/beeline-buzz">Beeline Buzz by almondjoycam</a></iframe>
+<iframe title="The Clockwork Courier itch.io widget" frameborder="0" src="https://itch.io/embed/3783983?bg_color=272727&amp;fg_color=fdfffc&amp;link_color=775be7&amp;border_color=333333" width="552" height="167"><a href="https://abpo.itch.io/the-clockwork-courier">The Clockwork Courier by abpo, almondjoycam</a></iframe>
 
         </main>
     </body>
