--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <!-- Title -->
         <title>Camber's Creations</title>
         <link
-        rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
+        rel="icon" type="image/png" href="/almondjoyart/static/imgs/pfp-ico.png"> <!-- Display information -->
         <meta charset="UTF-8">
         <meta
         name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
-        <link
-        rel="stylesheet" href="/static/styles/default.css">
+        <link rel="stylesheet" href="/almondjoyart/static/styles/default.css"> 
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
     </head>
@@ -17,10 +16,10 @@
         <header>
             <h1>Camber's Creations</h1>
             <nav>
-                <a href="/">Home</a>
-                <a href="/gallery/">Illustration</a>
-                <a href="/web/">Websites</a>
-                <a href="/game-development/">Games</a>
+                <a href="/almondjoyart/">Home</a>
+                <a href="/almondjoyart/gallery/">Illustration</a>
+                <a href="/almondjoyart/web/">Websites</a>
+                <a href="/almondjoyart/game-development/">Games</a>
             </nav>
         </header>
         <main>
@@ -29,7 +28,7 @@ a hobby for as long as I can remember.</p>
 <h2>Right Now</h2>
 <p>Current listening: <div class="lastfm"></div></p>
 <p>Also check out my <a href="https://stats.fm/almondjoycam">Stats.fm page</a>!</p>
-<p>Reading <em>Gender and Power</em> by <a href="http://www.raewynconnell.net/">Raewyn Connell</a> (1987)</p>
+<p>Current reading: <em>Gender and Power</em> by <a href="http://www.raewynconnell.net/">Raewyn Connell</a> (1987)</p>
 <h2>Contact Me</h2>
 <p>Use this form to reach out or request commissioned work.</p>
 <form id="contact-form">
