--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,11 @@
         <!-- Title -->
         <title>Camber's Web Development</title>
         <link
-        rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
+        rel="icon" type="image/png" href="/almondjoyart/static/imgs/pfp-ico.png"> <!-- Display information -->
         <meta charset="UTF-8">
         <meta
         name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
-        <link
-        rel="stylesheet" href="/static/styles/default.css">
+        <link rel="stylesheet" href="/almondjoyart/static/styles/default.css"> 
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
     </head>
@@ -17,10 +16,10 @@
         <header>
             <h1>Camber's Creations</h1>
             <nav>
-                <a href="/">Home</a>
-                <a href="/gallery/">Illustration</a>
-                <a href="/web/">Websites</a>
-                <a href="/game-development/">Games</a>
+                <a href="/almondjoyart/">Home</a>
+                <a href="/almondjoyart/gallery/">Illustration</a>
+                <a href="/almondjoyart/web/">Websites</a>
+                <a href="/almondjoyart/game-development/">Games</a>
             </nav>
         </header>
         <main>
